# MIG_generator

./: .gitignore  BestSchemasDict.cpp  BestSchemasDict.h  CMakeLists.txt  Makefile  README.md  SearchMutation.cpp  SearchMutation.h  final_result_3.txt  main.cpp  mig.cpp  mig.h  mig_generator.cpp  mig_generator.h  permutation.h  permutation.hpp  sh_for_sat.cpp  формат данных.txt
include/: BestSchemasDict.h  SearchMutation.h  mig.h  mig_generator.h  permutation.h  schema_info.h
sat_solver/: Makefile  README.md  bunch_sat.cpp  combine  combine.cpp  exact_synthesis.cpp  exact_synthesis_parallel.cpp  parallel_sat  sat_1
src/: BestSchemasDict.cpp  SearchMutation.cpp  check_correctness.cpp  get_mincode_complexity.cpp  main.cpp  mig.cpp  mig_generator.cpp  permutation.cpp  schema_info.cpp  shrink.cpp
